<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>

    <string name="title_activity_detail">DetailActivity</string>

    <string name="select_download_glide">Glide - Image Loading Library by Bump Tech</string>
    <string name="select_download_udacity">LoadApp - Current repository by Udacity</string>
    <string name="select_download_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="select_download_none">Please select the file to download</string>

    <string name="cloud_download_description">Cloud download image</string>

    <string name="intent_status_extra">STATUS</string>
    <string name="intent_filename_extra">FILENAME</string>

    <string name="detail_filename_label">File name:</string>
    <string name="detail_status_label">Status:</string>
    <string name="status_success">Success</string>
    <string name="status_fail">Fail</string>

    <string name="ok_button">OK</string>

</resources>
