<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/main_animation"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageDownloads"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/cloud_download_description"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_cloud_download_24" />

    <RadioGroup
        android:id="@+id/downloadRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:padding="@dimen/fab_margin"
        app:layout_constraintBottom_toTopOf="@id/customButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageDownloads">

        <RadioButton
            android:id="@+id/glideDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customRadioButtons"
            android:text="@string/select_download_glide" />

        <RadioButton
            android:id="@+id/udacityDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customRadioButtons"
            android:text="@string/select_download_udacity" />

        <RadioButton
            android:id="@+id/retrofitDownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customRadioButtons"
            android:text="@string/select_download_retrofit" />

    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/customButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:backgroundDefaultColor="@color/colorPrimary"
        app:backgroundLoadingColor="@color/colorPrimaryDark"
        app:buttonTextColor="@color/white"
        app:circleColor="@color/colorAccent"/>

</androidx.constraintlayout.motion.widget.MotionLayout>